k8s/apply-init-chown.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noir-frontend
  namespace: tech-local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noir-frontend
  template:
    metadata:
      labels:
        app: noir-frontend
    spec:
      containers:
      - name: noir-frontend
        image: marlonanderson/noir-frontend:v1.0.1
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: run-dir
          mountPath: /run
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 3
      volumes:
      - name: run-dir
        emptyDir: {}
